guarding against possible getGaps being undefined and fixing issue where width wasn't being passed as a number; also tweaking cutsite drawing z index

--- a/src/RowItem/style.css
+++ b/src/RowItem/style.css
@@ -26,7 +26,7 @@
 .veRowViewCutsite {
   background: #8a9ba8;
   margin-left: -2px;
-  z-index: -1;
+  /* z-index: -1; */
 }
 .bp3-dark .veRowViewCutsite.snipHovered {
   background: #c5e3fa !important;
